--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -31,6 +31,28 @@
   }
 }
 
+.currentEpisode {
+  text-align: center;
+
+  img {
+    border-radius: 1.5rem;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.1rem Lexend, sans-serif;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: .6rem;
+    line-height: 1.5rem;
+  }
+}
+
 .emptyPlayer {
   width: 100%;
   height: 20rem;
@@ -82,11 +104,25 @@
     border: 0;
     font-size: 0;
 
+    transition: filter .2s;
+
+    &:disabled {
+      cursor: default;
+    }
+
+    &:hover:not(:disabled) {
+      filter: brightness(.8);
+    }
+
     &.playerButton {
       width: 4rem;
       height: 4rem;
       background: var(--purple-400);
       border-radius: 1rem;
+
+      &:hover:not(:disabled) {
+        filter: brightness(.95);
+      }
     }
   }
 }
